<resources>
    <string name="app_name">Clube do Ursolão</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_login">Login</string>
    <string name="hint_password">Senha</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_name">Nome</string>
    <string name="hint_phone">N° de Telefone</string>

    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_link">Não tem conta ainda? Cadastre-se</string>
    <string name="forgetPassword">Esqueceu a senha?</string>
    <string name="signIn">Logar</string>
    <string name="registerUserDescription">Tenha tudo sem ter nada! Não entendeu a frase conheça no app!</string>
    <string name="registerUser">Cadastrar</string>

    <!-- Titles -->
    <string name="title_category">Categorias</string>
    <string name="title_my_products">Meus Produtos</string>
    <string name="title_devolution">Devolução</string>
    <string name="title_about">Sobre</string>
    <string name="title_exit">Sair</string>

    <!-- Invite -->
    <string name="invite">Ligue para seus amigos, compartilhe nas redes sociais para que todos possam fazer parte do
        clube.
    </string>
    <string name="developerName">DESENVOLVIDO POR \n Arthur Sales e Andrea Floriano \n Versão 1.0</string>
    <string name="Invite_Call">Ligar</string>
    <string name="Invite_Share">Compartilhar</string>

    <!-- From LendingProduct and Product-->
    <string name="updateMyProduct">Atualizando Dados</string>
    <string name="hint_title">Novo Título</string>
    <string name="situation_question">O produto já foi emprestado?</string>
    <string name="situation_true">Sim</string>
    <string name="situation_false">Não</string>
    <string name="hint_owner_lending">Para quem?</string>
    <string name="hint_endDate">Data final para devolução</string>
    <string name="availableForLoan">Disponibilizar Produto</string>
    <string name="hint_descr">Nova Descrição</string>
    <string name="hint_category">Nova Categoria</string>
    <string name="category_clothes">Roupas</string>
    <string name="category_shoes">Sapatos</string>
    <string name="category_toys">Brinquedos</string>
    <string name="category_tools">Ferramentas</string>
    <string name="category_question">Qual a categoria do produto?</string>


</resources>
