<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".view.about.AboutFragment">

    <ImageView
            android:src="@drawable/logo_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.554"/>

    <TextView
            android:textColor="@color/colorTextSecundary"
            android:text="@string/invite"
            android:lines="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/txtInvite" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            android:id="@+id/tilInvitePhone"
            app:layout_constraintTop_toBottomOf="@+id/txtInvite"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:boxBackgroundColor="@color/colorEditTextDefault"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtInvitePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:maxLength="12"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/txtInvite" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btnCall"
            android:text="@string/Invite_Call"
            android:background="@drawable/background_button_default"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/btnShare" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnShare" app:layout_constraintBottom_toBottomOf="@+id/btnShare"/>

    <Button
            android:id="@+id/btnShare"
            android:background="@drawable/background_button_default"
            android:text="@string/Invite_Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btnCall"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtInvite"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView3"/>

    <TextView
            android:gravity="center"
            android:textColor="@color/colorTextSecundary"
            android:text="@string/developerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>