<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/background_florest"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/backgroundStatusProduct"
            android:layout_height="match_parent"
            tools:context=".view.login.LoginFragment">

        <View android:layout_width="match_parent"
              android:layout_height="300dp"
              android:background="@color/colorBackgroundLogin"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" android:id="@+id/view"/>
        <ImageView
                android:src="@drawable/logo_yellow_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgLogo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cardViewLogin" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/view"/>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:id="@+id/cardViewLogin"
                android:layout_height="280dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="@+id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:padding="0dp">
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxBackgroundColor="@color/colorEditTextDefault"
                        android:id="@+id/tilEmail"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintTop_toTopOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/edtEmail"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:hint="@string/hint_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                    />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:id="@+id/tilPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxBackgroundColor="@color/colorEditTextDefault"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:hint="@string/hint_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:text="@string/forgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/forgetPassword"
                        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                        app:layout_constraintEnd_toEndOf="@+id/tilPassword"/>

                <Button
                        android:text="@string/signIn"
                        android:background="@drawable/background_button_details"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorTextSecundary"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnLogar"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/registerLink"
                android:text="@string/register_link"
                android:background="@drawable/background_user"
                android:textColor="@color/colorTextSecundary"
                android:fontFamily="sans-serif-black"
                android:elevation="3dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cardViewLogin" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>